# herdr-omnisearch

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  config.example.ini  herdr-plugin.toml  install.sh  setup.cfg
.github/workflows/: ci.yml
scripts/: make-bundle.sh
src/herdr_omnisearch/: __init__.py  cli.py  herdr_cli.py  herdr_socket.py
tests/: test_cli.py  test_herdr_cli.py  test_herdr_socket.py
