[metadata]
name = herdr-omnisearch
version = 0.4.1
description = Fast local search and navigation for Herdr agent workspaces
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = dmnkf
maintainer_email = filligerdominik@gmail.com
url = https://github.com/dmnkf/herdr-omnisearch
project_urls =
    Source = https://github.com/dmnkf/herdr-omnisearch
    Issues = https://github.com/dmnkf/herdr-omnisearch/issues
keywords = herdr, search, navigation, agents, sqlite, fts5
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    herdr-omnisearch = herdr_omnisearch.cli:main
